src/common/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
	<label>Property</label>
	<nameField>
		<label>Property Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Properties</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>