src/common/main/default/objects/Property__c/fields/Address__c.field-meta.xml
<CustomField>
	<fullName>Address__c</fullName>
	<label>Address</label>
	<length>100</length>
	<type>Text</type>
</CustomField>