src/common/main/default/objects/Property__c/fields/Beds__c.field-meta.xml
<CustomField>
	<fullName>Beds__c</fullName>
	<label>Beds</label>
	<precision>2</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>