src/common/main/default/objects/Property__c/fields/Broker__c.field-meta.xml
<CustomField>
	<fullName>Broker__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Broker</label>
	<referenceTo>Broker__c</referenceTo>
	<relationshipLabel>Properties</relationshipLabel>
	<relationshipName>Properties</relationshipName>
	<type>Lookup</type>
</CustomField>