src/common/main/default/objects/Property__c/fields/Description__c.field-meta.xml
<CustomField>
	<fullName>Description__c</fullName>
	<label>Description</label>
	<length>500</length>
	<type>LongTextArea</type>
</CustomField>