src/common/main/default/objects/Property__c/fields/Price__c.field-meta.xml
<CustomField>
	<fullName>Price__c</fullName>
	<label>Price</label>
	<precision>8</precision>
	<scale>0</scale>
	<type>Currency</type>
</CustomField>