src/common/main/default/objects/Property__c/fields/Status__c.field-meta.xml
<CustomField>
	<fullName>Status__c</fullName>
	<label>Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Available</fullName>
			</value>
			<value>
				<fullName>Under agreement</fullName>
			</value>
			<value>
				<fullName>Sold</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>