src/common/main/default/objects/Property__c/fields/Title__c.field-meta.xml
<CustomField>
	<fullName>Title__c</fullName>
	<label>Title</label>
	<length>100</length>
	<type>Text</type>
</CustomField>